update env template

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ REDDIT_CLIENT_SECRET=""
 REDDIT_USERNAME=""
 REDDIT_PASSWORD=""
 
-PROVIDERS_LINK_PARTS_SOURCE="" # "local" or "mongo" or "postgres" or panic on runtime
+PROVIDERS_LINK_PARTS_SOURCE="local" # "local" or "mongo" or "postgres" or panic on runtime
 
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 MONGO_FIRST_HANDLE_URL_PART="" #local "mongodb://" cloud "mongodb+srv://"
