fix check env default values test

--- a/.env
+++ b/.env
@@ -143,15 +143,15 @@ IS_ENABLED_MEDRXIV="false"
 IS_ENABLED_REDDIT="false"
 IS_ENABLED_TWITTER="false"
 
-IS_DBS_INITIALIZATION_ENABLED="true"
-IS_DBS_INITIALIZATION_ENABLED_PROVIDERS="true"
-IS_DBS_INITIALIZATION_ENABLED_ARXIV="true"
-IS_DBS_INITIALIZATION_ENABLED_BIORXIV="true"
-IS_DBS_INITIALIZATION_ENABLED_GITHUB="true"
-IS_DBS_INITIALIZATION_ENABLED_HABR="true"
-IS_DBS_INITIALIZATION_ENABLED_MEDRXIV="true"
-IS_DBS_INITIALIZATION_ENABLED_REDDIT="true"
-IS_DBS_INITIALIZATION_ENABLED_TWITTER="true"
+IS_DBS_INITIALIZATION_ENABLED="false"
+IS_DBS_INITIALIZATION_ENABLED_PROVIDERS="false"
+IS_DBS_INITIALIZATION_ENABLED_ARXIV="false"
+IS_DBS_INITIALIZATION_ENABLED_BIORXIV="false"
+IS_DBS_INITIALIZATION_ENABLED_GITHUB="false"
+IS_DBS_INITIALIZATION_ENABLED_HABR="false"
+IS_DBS_INITIALIZATION_ENABLED_MEDRXIV="false"
+IS_DBS_INITIALIZATION_ENABLED_REDDIT="false"
+IS_DBS_INITIALIZATION_ENABLED_TWITTER="false"
 
 IS_PRINTS_ENABLED="false"
 IS_PRINTS_ENABLED_PROVIDERS="false"
@@ -251,8 +251,8 @@ LINKS_LIMIT_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link l
 LINKS_LIMIT_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
-IS_SHOW_SOURCE_PLACE_ENABLED="true"
-IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="true"
+IS_SHOW_SOURCE_PLACE_ENABLED="false"
+IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="false"
 
 ERROR_RED="0" # u8
 ERROR_GREEN="0" # u8
