add MONGO_CONNECTION_TIMEOUT and POSTGRES_CONNECTION_TIMEOUT to env and docker-compose

--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ MONGO_IP=""
 MONGO_PORT=""
 MONGO_PARAMS=""
 
+MONGO_CONNECTION_TIMEOUT=1000 #ms u64
+
 MONGO_PROVIDERS_LINK_PARTS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART=""
@@ -89,6 +91,8 @@ POSTGRES_PASSWORD=""
 POSTGRES_IP=""
 POSTGRES_PORT=""
 POSTGRES_DB=""
+
+POSTGRES_CONNECTION_TIMEOUT=1000 #ms u64
 
 IS_POSTGRES_INITIALIZATION_ENABLED="false"
 IS_POSTGRES_INITIALIZATION_ENABLED_PROVIDERS="false"
