--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
       MONGO_PORT: ${MONGO_PORT}
       MONGO_PARAMS: ${MONGO_PARAMS}
 
+      MONGO_CONNECTION_TIMEOUT: ${MONGO_CONNECTION_TIMEOUT}
+
       MONGO_PROVIDERS_LINK_PARTS_DB_NAME: ${MONGO_PROVIDERS_LINK_PARTS_DB_NAME}
       MONGO_PROVIDERS_LOGS_DB_NAME: ${MONGO_PROVIDERS_LOGS_DB_NAME}
       MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART: ${MONGO_PROVIDERS_LOGS_DB_COLLECTION_HANDLE_SECOND_PART}
@@ -125,6 +127,8 @@ services:
       POSTGRES_IP: ${POSTGRES_IP}
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_DB: ${POSTGRES_DB}
+
+      POSTGRES_CONNECTION_TIMEOUT: ${POSTGRES_CONNECTION_TIMEOUT}
 
       IS_POSTGRES_INITIALIZATION_ENABLED: ${IS_POSTGRES_INITIALIZATION_ENABLED}
       IS_POSTGRES_INITIALIZATION_ENABLED_PROVIDERS: ${IS_POSTGRES_INITIALIZATION_ENABLED_PROVIDERS}
