update .env file

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ MONGO_IP=""
 MONGO_PORT=""
 MONGO_PARAMS=""
 
-MONGO_CONNECTION_TIMEOUT="1000" #ms u64
+MONGO_CONNECTION_TIMEOUT="0" #ms u64 2000 
 
 MONGO_PROVIDERS_LINK_PARTS_DB_NAME=""
 MONGO_PROVIDERS_LOGS_DB_NAME=""
@@ -92,7 +92,7 @@ POSTGRES_IP=""
 POSTGRES_PORT=""
 POSTGRES_DB=""
 
-POSTGRES_CONNECTION_TIMEOUT="1000" #ms u64
+POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 
 IS_POSTGRES_INITIALIZATION_ENABLED="false"
 IS_POSTGRES_INITIALIZATION_ENABLED_PROVIDERS="false"
