error_display lib

--- a/proc_macro_libs/Cargo.toml
+++ b/proc_macro_libs/Cargo.toml
@@ -1,14 +1,15 @@
 [workspace]
 members = [
-    "box_err_from_err",
-    "enum_extention",
-    "gen_enum",
-    "gen_enum_without_values",
-    "env_var_typed",
-    "git_info",
-    "impl_display",
-    "impl_from_for_upper_struct",
-    "init_from_env",
-    "print_type_from_config",
-    "provider_kind_from_config"
+  "box_err_from_err",
+  "enum_extention",
+  "error_display",
+  "gen_enum",
+  "gen_enum_without_values",
+  "env_var_typed",
+  "git_info",
+  "impl_display",
+  "impl_from_for_upper_struct",
+  "init_from_env",
+  "print_type_from_config",
+  "provider_kind_from_config",
 ]
