--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4"
 convert_case = "0.5.0"
 dotenv = "0.15.0"
 enum_extention = {path = "./proc_macro_libs/enum_extention"}
+error_display = {path = "./proc_macro_libs/error_display"}
 futures = "0.3.5"
 gen_enum = {path = "./proc_macro_libs/gen_enum"}
 gen_enum_without_values = {path = "./proc_macro_libs/gen_enum_without_values"}
