add timezone to .env and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
 
       PROVIDERS_LINK_PARTS_SOURCE: ${PROVIDERS_LINK_PARTS_SOURCE}
 
+      TIMEZONE: ${TIMEZONE}
+
       MONGO_FIRST_HANDLE_URL_PART: ${MONGO_FIRST_HANDLE_URL_PART}
       MONGO_SECOND_HANDLE_URL_PART: ${MONGO_SECOND_HANDLE_URL_PART}
       MONGO_THIRD_HANDLE_URL_PART: ${MONGO_THIRD_HANDLE_URL_PART}
