--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "3.3.3"
 ansi_term = "0.12"
 box_err_from_err = {path = "./proc_macro_libs/box_err_from_err"}
 chrono = "0.4"
