--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,8 @@ services:
     env_file:
       - ./.env
     environment:
+      SERVER_IP: ${SERVER_IP}
+      SERVER_PORT: ${SERVER_PORT}
       GITHUB_NAME: ${GITHUB_NAME}
       GITHUB_TOKEN: ${GITHUB_TOKEN}
 
