fix db url pattern examples

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ PROVIDERS_LINK_PARTS_SOURCE="local" # "local" or "mongo" or "postgres" or panic 
 
 TIMEZONE="0" # i32, in seconds. main is 10800. value = hours * 3600. -24 < hours < 24. so value is -86_400 < secs && secs < 86_400. Otherwise panics on start.  Makes a new FixedOffset for the Eastern Hemisphere with given timezone difference. The negative secs means the Western Hemisphere
 
-# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_IP&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
+# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 MONGO_FIRST_HANDLE_URL_PART="" #local "mongodb://" cloud "mongodb+srv://"
 MONGO_SECOND_HANDLE_URL_PART=""  #local ":" cloud ":"
 MONGO_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
@@ -84,7 +84,7 @@ IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_MEDRXIV="false"
 IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_REDDIT="false"
 IS_MONGO_LINK_PARTS_RANDOMIZE_ORDER_ENABLED_TWITTER="false"
 
-# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_DB
+# example POSTGRES_FIRST_HANDLE_URL_PART&POSTGRES_LOGIN&POSTGRES_SECOND_HANDLE_URL_PART&POSTGRES_PASSWORD&POSTGRES_THIRD_HANDLE_URL_PART&POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_PORT&POSTGRES_FIFTH_HANDLE_URL_PART&POSTGRES_DB [?paramspec]
 POSTGRES_FIRST_HANDLE_URL_PART="" #local "postgres://" cloud "postgres://"
 POSTGRES_SECOND_HANDLE_URL_PART="" #local ":" cloud ":"
 POSTGRES_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
