add POSTGRES_SIXTH_HANDLE_URL_PART and POSTGRES_PARAMS to docker-compose and .env

--- a/.env
+++ b/.env
@@ -90,12 +90,14 @@ POSTGRES_SECOND_HANDLE_URL_PART="" #local ":" cloud ":"
 POSTGRES_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
 POSTGRES_FOURTH_HANDLE_URL_PART="" #local ":" cloud ""
 POSTGRES_FIFTH_HANDLE_URL_PART="" #local "/" cloud "/"
+POSTGRES_SIXTH_HANDLE_URL_PART="" #local "?" cloud "?" 
 
 POSTGRES_LOGIN=""
 POSTGRES_PASSWORD=""
 POSTGRES_IP=""
 POSTGRES_PORT=""
 POSTGRES_DB=""
+POSTGRES_PARAMS="" # example: target_session_attrs=any&application_name=myapp
 
 POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 
