--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,12 +125,14 @@ services:
       POSTGRES_THIRD_HANDLE_URL_PART: ${POSTGRES_THIRD_HANDLE_URL_PART}
       POSTGRES_FOURTH_HANDLE_URL_PART: ${POSTGRES_FOURTH_HANDLE_URL_PART}
       POSTGRES_FIFTH_HANDLE_URL_PART: ${POSTGRES_FIFTH_HANDLE_URL_PART}
+      POSTGRES_SIXTH_HANDLE_URL_PART: ${POSTGRES_SIXTH_HANDLE_URL_PART}
 
       POSTGRES_LOGIN: ${POSTGRES_LOGIN}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_IP: ${POSTGRES_IP}
       POSTGRES_PORT: ${POSTGRES_PORT}
       POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PARAMS: ${POSTGRES_PARAMS}
 
       POSTGRES_CONNECTION_TIMEOUT: ${POSTGRES_CONNECTION_TIMEOUT}
 
