some comments inside .env

--- a/.env
+++ b/.env
@@ -90,7 +90,7 @@ POSTGRES_SECOND_HANDLE_URL_PART="" #local ":" cloud ":"
 POSTGRES_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
 POSTGRES_FOURTH_HANDLE_URL_PART="" #local ":" cloud ""
 POSTGRES_FIFTH_HANDLE_URL_PART="" #local "/" cloud "/"
-POSTGRES_SIXTH_HANDLE_URL_PART="" #local "?" cloud "?" 
+POSTGRES_SIXTH_HANDLE_URL_PART="" #local "?" cloud "?" # empty if there are no params
 
 POSTGRES_LOGIN=""
 POSTGRES_PASSWORD=""
