--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = "4.0.1"
+actix-session = {version = "0.6", features = ["redis-rs-tls-session"]}
+actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
+actix-web-lab = "0.15"
 ansi_term = "0.12"
 box_err_from_err = {path = "./proc_macro_libs/box_err_from_err"}
 chrono = "0.4"
