--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ serde = "1.0"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
 serde_json = "1.0"
+serde-aux = "3"
 sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres"]}
 strum = "0.23.0"
 strum_macros = "0.23.1"
