--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,11 +41,11 @@ num_cpus = "1.0"
 provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
 regex = "1.5"
 reqwest = {version = "0.11.0", features = ["json", "blocking"]}
-secrecy = "0.8.0"
 serde = "1.0"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
 serde_json = "1.0"
+secrecy = {version = "0.8", features = ["serde"]}
 serde-aux = "3"
 sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres"]}
 strum = "0.23.0"
