--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER_IP="" # 127.0.0.1
 SERVER_PORT="" # 8080
+HMAC_SECRET: "super-long-and-secret-random-key-needed-to-verify-message-integrity"
 
 GITHUB_NAME=""
 GITHUB_TOKEN=""
