REDIS_IP REDIS_PORT

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,9 @@ services:
 
       TIMEZONE: ${TIMEZONE}
 
+      REDIS_IP: ${REDIS_IP}
+      REDIS_PORT: ${REDIS_PORT}
+
       MONGO_FIRST_HANDLE_URL_PART: ${MONGO_FIRST_HANDLE_URL_PART}
       MONGO_SECOND_HANDLE_URL_PART: ${MONGO_SECOND_HANDLE_URL_PART}
       MONGO_THIRD_HANDLE_URL_PART: ${MONGO_THIRD_HANDLE_URL_PART}
