--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SERVER_IP="" # 127.0.0.1
 SERVER_PORT="" # 8080
-HMAC_SECRET="super-long-and-secret-random-key-needed-to-verify-message-integrity"
+HMAC_SECRET="" # super-long-and-secret-random-key-needed-to-verify-message-integrity
 
 GITHUB_NAME=""
 GITHUB_TOKEN=""
@@ -14,6 +14,9 @@ REDDIT_PASSWORD=""
 PROVIDERS_LINK_PARTS_SOURCE="local" # "local" or "mongo" or "postgres" or panic on runtime
 
 TIMEZONE="0" # i32, in seconds. main is 10800. value = hours * 3600. -24 < hours < 24. so value is -86_400 < secs && secs < 86_400. Otherwise panics on start.  Makes a new FixedOffset for the Eastern Hemisphere with given timezone difference. The negative secs means the Western Hemisphere
+
+REDIS_IP="" # 127.0.0.1
+REDIS_PORT="" # 6379
 
 # url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
 MONGO_FIRST_HANDLE_URL_PART="" #local "mongodb://" cloud "mongodb+srv://"
