BASE_URL REQUIRE_SSL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       SERVER_IP: ${SERVER_IP}
       SERVER_PORT: ${SERVER_PORT}
       HMAC_SECRET: ${HMAC_SECRET}
+      BASE_URL: ${BASE_URL}
+      REQUIRE_SSL: ${REQUIRE_SSL}
 
       GITHUB_NAME: ${GITHUB_NAME}
       GITHUB_TOKEN: ${GITHUB_TOKEN}
