--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 SERVER_IP="" # 127.0.0.1
 SERVER_PORT="" # 8080
 HMAC_SECRET="" # super-long-and-secret-random-key-needed-to-verify-message-integrity
+BASE_URL="" # http://127.0.0.1
+REQUIRE_SSL="false" # true for prod, false for local dev
 
 GITHUB_NAME=""
 GITHUB_TOKEN=""
