--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ html_parser = "0.6.2"
 impl_display = {path = "./proc_macro_libs/impl_display"}
 impl_from_for_upper_struct = {path = "./proc_macro_libs/impl_from_for_upper_struct"}
 init_from_env = {path = "./proc_macro_libs/init_from_env"}
+unicode-segmentation = "1"
 itertools = "0.10.1"
 lazy_static = "1.4"
 mongodb = "2.0.1"
@@ -57,6 +58,9 @@ tracing = {version = "0.1", features = ["log"]}
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
+validator = "0.14"
+quickcheck = "0.9.2"
+quickcheck_macros = "1.0.0"
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
 # roux = "1.3.10" #reddit. worked with 0.4.0 version
@@ -80,6 +84,8 @@ tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 
 [dev-dependencies]
+claim = "0.5"
+fake = "~2.3"
 
 # ###########################
 # # custom linker dependencies
