--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ quickcheck_macros = "1.0.0"
 [dev-dependencies]
 claim = "0.5"
 fake = "~2.3"
+wiremock = "0.5.2"
 
 # ###########################
 # # custom linker dependencies
