--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 validator = "0.14"
 quickcheck = "0.9.2"
 quickcheck_macros = "1.0.0"
+uuid = {version = "0.8.1", features = ["v4", "serde"]}
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
 # roux = "1.3.10" #reddit. worked with 0.4.0 version
