--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ box_err_from_err = {path = "./proc_macro_libs/box_err_from_err"}
 chrono = "0.4"
 convert_case = "0.5.0"
 dotenv = "0.15.0"
+rand = {version = "0.8", features = ["std_rng"]}
 enum_extention = {path = "./proc_macro_libs/enum_extention"}
 error_display = {path = "./proc_macro_libs/error_display"}
 futures = "0.3.5"
