DATABASE_URL: ${DATABASE_URL}

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -141,6 +141,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_PARAMS: ${POSTGRES_PARAMS}
 
+      DATABASE_URL: ${DATABASE_URL}
+
       POSTGRES_CONNECTION_TIMEOUT: ${POSTGRES_CONNECTION_TIMEOUT}
 
       IS_POSTGRES_INITIALIZATION_ENABLED: ${IS_POSTGRES_INITIALIZATION_ENABLED}
