--- a/.env
+++ b/.env
@@ -105,6 +105,9 @@ POSTGRES_PORT=""
 POSTGRES_DB=""
 POSTGRES_PARAMS="" # example: target_session_attrs=any&application_name=myapp
 
+#sqlx require this for postgres
+DATABASE_URL="" 
+
 POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 
 IS_POSTGRES_INITIALIZATION_ENABLED="false"
