--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,12 @@ uuid = {version = "0.8.1", features = ["v4", "serde"]}
 [dev-dependencies]
 claim = "0.5"
 fake = "~2.3"
+linkify = "0.8"
+once_cell = "1"
+reqwest = "0.11"
+serde_json = "1"
+serde_urlencoded = "0.7.1"
+tokio = {version = "1", features = ["rt", "macros"]}
 wiremock = "0.5.2"
 
 # ###########################
