--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,14 +43,14 @@ mongodb = "2.0.1"
 num_cpus = "1.0"
 provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
 regex = "1.5"
-reqwest = {version = "0.11.0", features = ["json", "blocking"]}
+reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"]}
 serde = "1.0"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
 serde_json = "1.0"
 secrecy = {version = "0.8", features = ["serde"]}
 serde-aux = "3"
-sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres"]}
+sqlx = {version = "0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]} #"runtime-tokio-native-tls", 
 strum = "0.23.0"
 strum_macros = "0.23.1"
 thiserror = "1.0.30"
@@ -64,6 +64,15 @@ validator = "0.14"
 quickcheck = "0.9.2"
 quickcheck_macros = "1.0.0"
 uuid = {version = "0.8.1", features = ["v4", "serde"]}
+urlencoding = "2"
+base64 = "0.13"
+config = "0.11"
+env_logger = "0.9"
+hex = "0.4"
+hmac = {version = "0.12", features = ["std"]}
+htmlescape = "0.3"
+sha2 = "0.10"
+time = "0.3.9"
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
 # roux = "1.3.10" #reddit. worked with 0.4.0 version
