--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,67 +12,71 @@ version = "0.1.0"
 # cargo will default to `package.name`, which is what we want.
 path = "src/lib.rs"
 
+[[bin]]
+name = "tufa_backend"
+path = "src/main.rs"
+
 [dependencies]
-actix-web = "4.0.1"
 actix-session = {version = "0.6", features = ["redis-rs-tls-session"]}
+actix-web = "4.0.1"
 actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
 actix-web-lab = "0.15"
+ansi_term = "0.12"
 anyhow = "1"
 argon2 = {version = "0.4.0", features = ["std"]}
-tracing-actix-web = "0.5"
-ansi_term = "0.12"
+base64 = "0.13"
 box_err_from_err = {path = "./proc_macro_libs/box_err_from_err"}
 chrono = "0.4"
+config = "0.11"
 convert_case = "0.5.0"
 dotenv = "0.15.0"
-rand = {version = "0.8", features = ["std_rng"]}
 enum_extention = {path = "./proc_macro_libs/enum_extention"}
+env_logger = "0.9"
 error_display = {path = "./proc_macro_libs/error_display"}
 futures = "0.3.5"
 gen_enum = {path = "./proc_macro_libs/gen_enum"}
 gen_enum_without_values = {path = "./proc_macro_libs/gen_enum_without_values"}
 git_info = {path = "./proc_macro_libs/git_info"}
+hex = "0.4"
+hmac = {version = "0.12", features = ["std"]}
 html_parser = "0.6.2"
+htmlescape = "0.3"
 impl_display = {path = "./proc_macro_libs/impl_display"}
 impl_from_for_upper_struct = {path = "./proc_macro_libs/impl_from_for_upper_struct"}
 init_from_env = {path = "./proc_macro_libs/init_from_env"}
-unicode-segmentation = "1"
 itertools = "0.10.1"
 lazy_static = "1.4"
 mongodb = "2.0.1"
 num_cpus = "1.0"
 provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
+quickcheck = "0.9.2"
+quickcheck_macros = "1.0.0"
+rand = {version = "0.8", features = ["std_rng"]}
 regex = "1.5"
 reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"]}
+secrecy = {version = "0.8", features = ["serde"]}
 serde = "1.0"
+serde-aux = "3"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
 serde_json = "1.0"
-secrecy = {version = "0.8", features = ["serde"]}
-serde-aux = "3"
-sqlx = {version = "0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]} #"runtime-tokio-native-tls", 
+sha2 = "0.10"
+sqlx = {version = "0.5", default-features = false, features = ["postgres", "runtime-actix-rustls", "macros", "uuid", "chrono", "migrate", "offline"]}#"runtime-tokio-native-tls", 
 strum = "0.23.0"
 strum_macros = "0.23.1"
 thiserror = "1.0.30"
+time = "0.3.9"
 tokio = {version = "1.7.1", features = ["macros"]}
 toml = "0.5"
 tracing = {version = "0.1", features = ["log"]}
+tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
-validator = "0.14"
-quickcheck = "0.9.2"
-quickcheck_macros = "1.0.0"
-uuid = {version = "0.8.1", features = ["v4", "serde"]}
+unicode-segmentation = "1"
 urlencoding = "2"
-base64 = "0.13"
-config = "0.11"
-env_logger = "0.9"
-hex = "0.4"
-hmac = {version = "0.12", features = ["std"]}
-htmlescape = "0.3"
-sha2 = "0.10"
-time = "0.3.9"
+uuid = {version = "0.8.1", features = ["v4", "serde"]}
+validator = "0.14"
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
 # roux = "1.3.10" #reddit. worked with 0.4.0 version
