--- a/.dockerignore
+++ b/.dockerignore
@@ -2,18 +2,16 @@
 /.vscode
 /code_examples
 /logs
-/mongodb_volume
 /old_code
 /parsing_file_examples
-/postgresql_volume
 /proc_macro_libs/target
 /proc_macro_libs/Cargo.lock
 /proc_macro_libs/*/target
 /proc_macro_libs/*/Cargo.lock
-/redis_volume
 /target
-/vscode
 /todos
+/volumes
+/vscode
 .gitignore
 docker-compose.yml
 README.md
