--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./dbs.env
     volumes:
       - ./volumes/postgresql_volume:/data/db
+      # maybe instead of local folder create tufa_backend folder for only this service like /var/lib/docker/volumes/tufa_backend/postgresql_volume:/data/db
     ports:
       - 5432:5432
   mongodb_service:
@@ -27,6 +28,7 @@ services:
       - 27017:27017
     volumes:
       - ./volumes/mongodb_volume:/data/db
+      # maybe instead of local folder create tufa_backend folder for only this service like /var/lib/docker/volumes/tufa_backend/mongo_volume:/data/db
   redis_service:
     container_name: redis_container
     image: 'redis:latest'
@@ -37,6 +39,7 @@ services:
       ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - ./volumes/redis_volume/:/data
+      # maybe instead of local folder create tufa_backend folder for only this service like /var/lib/docker/volumes/tufa_backend/redis_volume:/data/db
   # tufa_backend_service:
   #   container_name: tufa_backend-container
   #   image: tufa_backend-image
