--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     container_name: postgres_container
     image: postgres:latest
     restart: always
-    # environment:
-    #   POSTGRES_USER: ${POSTGRES_USER}
-    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    #   POSTGRES_DB: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_LOGIN}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: newsletter
     env_file:
       - ./dbs.env
     volumes:
@@ -19,9 +19,9 @@ services:
     container_name: mongodb_container
     image: mongo:latest
     restart: always
-    # environment:
-    #   ME_CONFIG_MONGODB_ADMINUSERNAME: ${ME_CONFIG_MONGODB_ADMINUSERNAME}
-    #   ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD}
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_LOGIN}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_PASSWORD}
     env_file:
       - ./dbs.env
     ports:
