--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,30 +26,20 @@ ansi_term = "0.12"
 anyhow = "1"
 argon2 = {version = "0.4.0", features = ["std"]}
 base64 = "0.13"
-box_err_from_err = {path = "./proc_macro_libs/box_err_from_err"}
 chrono = "0.4"
 config = "0.11"
 convert_case = "0.5.0"
 dotenv = "0.15.0"
-enum_extention = {path = "./proc_macro_libs/enum_extention"}
 env_logger = "0.9"
-error_display = {path = "./proc_macro_libs/error_display"}
 futures = "0.3.5"
-gen_enum = {path = "./proc_macro_libs/gen_enum"}
-gen_enum_without_values = {path = "./proc_macro_libs/gen_enum_without_values"}
-git_info = {path = "./proc_macro_libs/git_info"}
 hex = "0.4"
 hmac = {version = "0.12", features = ["std"]}
 html_parser = "0.6.2"
 htmlescape = "0.3"
-impl_display = {path = "./proc_macro_libs/impl_display"}
-impl_from_for_upper_struct = {path = "./proc_macro_libs/impl_from_for_upper_struct"}
-init_from_env = {path = "./proc_macro_libs/init_from_env"}
 itertools = "0.10.1"
 lazy_static = "1.4"
 mongodb = "2.0.1"
 num_cpus = "1.0"
-provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
 quickcheck = "0.9.2"
 quickcheck_macros = "1.0.0"
 rand = {version = "0.8", features = ["std_rng"]}
@@ -74,12 +64,36 @@ tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
-# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
-tufa_common = {path = "../tufa_common"}# local dev test without commits version
 unicode-segmentation = "1"
 urlencoding = "2"
 uuid = {version = "0.8.1", features = ["v4", "serde"]}
 validator = "0.14"
+#
+# tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
+tufa_common = {path = "../tufa_common"}# local dev test without commits version
+#
+provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
+#prod
+box_err_from_err = {git = "https://github.com/kuqmua/box_err_from_err"}
+enum_extention = {git = "https://github.com/kuqmua/enum_extention"}
+error_display = {git = "https://github.com/kuqmua/error_display"}
+gen_enum = {git = "https://github.com/kuqmua/gen_enum"}
+gen_enum_without_values = {git = "https://github.com/kuqmua/gen_enum_without_values"}
+git_info = {git = "https://github.com/kuqmua/git_info"}
+impl_display = {git = "https://github.com/kuqmua/impl_display"}
+impl_from_for_upper_struct = {git = "https://github.com/kuqmua/impl_from_for_upper_struct"}
+init_from_env = {git = "https://github.com/kuqmua/init_from_env"}
+#dev
+# box_err_from_err = {path = "../proc_macros/box_err_from_err"}
+# enum_extention = {path = "../proc_macros/enum_extention"}
+# error_display = {path = "../proc_macros/error_display"}
+# gen_enum = {path = "../proc_macros/gen_enum"}
+# gen_enum_without_values = {path = "../proc_macros/gen_enum_without_values"}
+# git_info = {path = "../proc_macros/git_info"}
+# impl_display = {path = "../proc_macros/impl_display"}
+# impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
+# init_from_env = {path = "../proc_macros/init_from_env"}
+#
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
 # roux = "1.3.10" #reddit. worked with 0.4.0 version
