--- a/proc_macro_libs/provider_kind_from_config/Cargo.toml
+++ b/proc_macro_libs/provider_kind_from_config/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 proc-macro=true
 
 [dependencies]
-syn = "1.0.75"
+syn = { version = "1.0.75", features = ["full"]}
 quote = "1.0.9"
 convert_case = "0.5.0"
