remove last part of proc_macro_libs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,8 +71,6 @@ validator = "0.14"
 #
 # tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
-#
-provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config"}
 #prod
 # box_err_from_err = {git = "https://github.com/kuqmua/box_err_from_err"}
 # enum_extention = {git = "https://github.com/kuqmua/enum_extention"}
@@ -83,6 +81,7 @@ provider_kind_from_config = {path = "./proc_macro_libs/provider_kind_from_config
 # impl_display = {git = "https://github.com/kuqmua/impl_display"}
 # impl_from_for_upper_struct = {git = "https://github.com/kuqmua/impl_from_for_upper_struct"}
 # init_from_env = {git = "https://github.com/kuqmua/init_from_env"}
+# provider_kind_from_config = {path = "https://github.com/kuqmua/provider_kind_from_config"}
 #dev
 box_err_from_err = {path = "../proc_macros/box_err_from_err"}
 enum_extention = {path = "../proc_macros/enum_extention"}
@@ -93,6 +92,7 @@ git_info = {path = "../proc_macros/git_info"}
 impl_display = {path = "../proc_macros/impl_display"}
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
 init_from_env = {path = "../proc_macros/init_from_env"}
+provider_kind_from_config = {path = "../proc_macros/provider_kind_from_config"}
 #
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
