--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ rand = {version = "0.8", features = ["std_rng"]}
 regex = "1.5"
 reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"]}
 secrecy = {version = "0.8", features = ["serde"]}
-serde = "1.0"
+serde = {version = "1.0", features = ["derive"]}
 serde-aux = "3"
 serde-xml-rs = "0.5.1"
 serde_derive = "1.0"
