--- a/.env
+++ b/.env
@@ -271,6 +271,7 @@ LINKS_LIMIT_MEDRXIV="0" # i64, but cannot be 0 or negative value (disable link l
 LINKS_LIMIT_REDDIT="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
+IS_TRACING_ENABLED="false"
 IS_DEBUG_IMPLEMENTATION_ENABLE="false"
 IS_SHOW_SOURCE_PLACE_ENABLED="false"
 IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="false"
