env IS_PARENT_TRACING_ENABLED="true"

--- a/.env
+++ b/.env
@@ -273,6 +273,7 @@ LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link l
 
 IS_PREPARATION_ENABLED="false"
 IS_TRACING_ENABLED="false"
+IS_PARENT_TRACING_ENABLED="true"
 IS_DEBUG_IMPLEMENTATION_ENABLE="true"
 IS_SHOW_SOURCE_PLACE_ENABLED="false"
 IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="false"
