TRACING_TYPE IS_CUSTOM_TRACE_TYPE_TRACING_ENABLED and others

--- a/.env
+++ b/.env
@@ -273,6 +273,12 @@ LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link l
 
 IS_PREPARATION_ENABLED="false"
 IS_TRACING_ENABLED="false"
+TRACING_TYPE="error" # trace|debug|info|warn|error
+IS_CUSTOM_TRACE_TYPE_TRACING_ENABLED="false"
+IS_CUSTOM_DEBUG_TYPE_TRACING_ENABLED="false"
+IS_CUSTOM_INFO_TYPE_TRACING_ENABLED="false"
+IS_CUSTOM_WARN_TYPE_TRACING_ENABLED="false"
+IS_CUSTOM_ERROR_TYPE_TRACING_ENABLED="true"
 IS_PARENT_TRACING_ENABLED="true"
 IS_DEBUG_IMPLEMENTATION_ENABLE="true"
 IS_SHOW_SOURCE_PLACE_ENABLED="false"
