--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ validator = "0.14"
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
 #prod
 # box_err_from_err = {git = "https://github.com/kuqmua/box_err_from_err"}
-# enum_extention = {git = "https://github.com/kuqmua/enum_extention"}
+# enum_extension = {git = "https://github.com/kuqmua/enum_extension"}
 # error_display = {git = "https://github.com/kuqmua/error_display"}
 # gen_enum = {git = "https://github.com/kuqmua/gen_enum"}
 # gen_enum_without_values = {git = "https://github.com/kuqmua/gen_enum_without_values"}
@@ -84,7 +84,7 @@ tufa_common = {path = "../tufa_common"}# local dev test without commits version
 # provider_kind_from_config = {path = "https://github.com/kuqmua/provider_kind_from_config"}
 #dev
 box_err_from_err = {path = "../proc_macros/box_err_from_err"}
-enum_extention = {path = "../proc_macros/enum_extention"}
+enum_extension = {path = "../proc_macros/enum_extension"}
 error_display = {path = "../proc_macros/error_display"}
 gen_enum = {path = "../proc_macros/gen_enum"}
 gen_enum_without_values = {path = "../proc_macros/gen_enum_without_values"}
