IS_TRACING_TIME_ENABLED="true"

--- a/.env
+++ b/.env
@@ -278,6 +278,7 @@ IS_PARENT_TRACING_ENABLED="true"
 IS_DEBUG_IMPLEMENTATION_ENABLE="true"
 IS_SHOW_SOURCE_PLACE_ENABLED="false"
 IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="false"
+IS_TRACING_TIME_ENABLED="true"
 
 ERROR_RED="0" # u8
 ERROR_GREEN="0" # u8
