--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ impl_display = {path = "../proc_macros/impl_display"}
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
 init_from_env = {path = "../proc_macros/init_from_env"}
 provider_kind_from_config = {path = "../proc_macros/provider_kind_from_config"}
+struct_field_getter = {path = "../proc_macros/struct_field_getter"}
 #
 # async-std = "1.10.0"
 # displaydoc = "0.2.3"
