--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ html_parser = "0.6.2"
 htmlescape = "0.3"
 itertools = "0.10.1"
 lazy_static = "1.4"
+mixin = "0.2.0"
 mongodb = "2.0.1"
 num_cpus = "1.0"
 quickcheck = "0.9.2"
