init_error_with_tracing = {path = "../proc_macros/init_error_with_tracing"}

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -91,6 +91,7 @@ gen_enum_without_values = {path = "../proc_macros/gen_enum_without_values"}
 git_info = {path = "../proc_macros/git_info"}
 impl_display = {path = "../proc_macros/impl_display"}
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
+init_error_with_tracing = {path = "../proc_macros/init_error_with_tracing"}
 init_from_env = {path = "../proc_macros/init_from_env"}
 provider_kind_from_config = {path = "../proc_macros/provider_kind_from_config"}
 struct_field_getter = {path = "../proc_macros/struct_field_getter"}
