--- a/.env
+++ b/.env
@@ -276,8 +276,7 @@ IS_TRACING_ENABLED="false"
 TRACING_TYPE="error" # trace|debug|info|warn|error
 IS_PARENT_TRACING_ENABLED="true"
 IS_DEBUG_IMPLEMENTATION_ENABLE="true"
-IS_SHOW_SOURCE_PLACE_ENABLED="false"
-IS_SHOW_GITHUB_SOURCE_PLACE_ENABLED="false"
+SOURCE_PLACE_TYPE="source" #source|github|none
 IS_TRACING_TIME_ENABLED="true"
 
 ERROR_RED="0" # u8
