deps impl_display_for_simple_error_enum

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,7 @@ gen_enum = {path = "../proc_macros/gen_enum"}
 gen_enum_without_values = {path = "../proc_macros/gen_enum_without_values"}
 git_info = {path = "../proc_macros/git_info"}
 impl_display = {path = "../proc_macros/impl_display"}
+impl_display_for_simple_error_enum = {path = "../proc_macros/impl_display_for_simple_error_enum"}
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
 impl_get_source = {path = "../proc_macros/impl_get_source"}
 impl_get_source_for_simple_error_enum = {path = "../proc_macros/impl_get_source_for_simple_error_enum"}
