--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ impl_display_for_simple_error_enum = {path = "../proc_macros/impl_display_for_si
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
 impl_get_source = {path = "../proc_macros/impl_get_source"}
 impl_get_source_for_simple_error_enum = {path = "../proc_macros/impl_get_source_for_simple_error_enum"}
+impl_get_where_was_for_error_struct = {path = "../proc_macros/impl_get_where_was_for_error_struct"}
 init_error = {path = "../proc_macros/init_error"}
 init_error_with_tracing = {path = "../proc_macros/init_error_with_tracing"}
 init_from_env = {path = "../proc_macros/init_from_env"}
