--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,7 @@ impl_get_source_for_original_error_struct = {path = "../proc_macros/impl_get_sou
 impl_get_source_for_parent_error_struct = {path = "../proc_macros/impl_get_source_for_parent_error_struct"}
 impl_get_source_for_simple_error_enum = {path = "../proc_macros/impl_get_source_for_simple_error_enum"}
 impl_get_source_for_source_error_enum = {path = "../proc_macros/impl_get_source_for_source_error_enum"}
+impl_get_where_was_for_enum = {path = "../proc_macros/impl_get_where_was_for_enum"}
 impl_get_where_was_for_error_struct = {path = "../proc_macros/impl_get_where_was_for_error_struct"}
 init_error = {path = "../proc_macros/init_error"}
 init_error_with_tracing = {path = "../proc_macros/init_error_with_tracing"}
