--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,6 +92,7 @@ impl_box_err_source_from_err = {path = "../proc_macros/impl_box_err_source_from_
 impl_display = {path = "../proc_macros/impl_display"}
 impl_display_for_error_struct = {path = "../proc_macros/impl_display_for_error_struct"}
 impl_display_for_simple_error_enum = {path = "../proc_macros/impl_display_for_simple_error_enum"}
+impl_error_with_tracing_for_original_error_struct_without_source_enum = {path = "../proc_macros/impl_error_with_tracing_for_original_error_struct_without_source_enum"}
 impl_from_for_upper_struct = {path = "../proc_macros/impl_from_for_upper_struct"}
 impl_get_source_for_original_error_struct = {path = "../proc_macros/impl_get_source_for_original_error_struct"}
 impl_get_source_for_parent_error_struct = {path = "../proc_macros/impl_get_source_for_parent_error_struct"}
