--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ thiserror = "1.0.30"
 time = "0.3.9"
 tokio = {version = "1.7.1", features = ["macros"]}
 toml = "0.5"
-tracing = {version = "0.1", features = ["log"]}
+tracing = {version = "0.1", features = ["log", "valuable"]}
 tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
@@ -68,6 +68,7 @@ unicode-segmentation = "1"
 urlencoding = "2"
 uuid = {version = "0.8.1", features = ["v4", "serde"]}
 validator = "0.14"
+# valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
 #
 # tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
