--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ unicode-segmentation = "1"
 urlencoding = "2"
 uuid = {version = "0.8.1", features = ["v4", "serde"]}
 validator = "0.14"
-# valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
+valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
 #
 # tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
