IS_BUNYAN_SEPARATED_BY_LINE_ENABLED

--- a/.env
+++ b/.env
@@ -277,6 +277,7 @@ TRACING_TYPE="error" # trace|debug|info|warn|error
 IS_PARENT_TRACING_ENABLED="true"
 SOURCE_PLACE_TYPE="source" #source|github|none
 IS_TRACING_TIME_ENABLED="true"
+IS_BUNYAN_SEPARATED_BY_LINE_ENABLED="true"
 
 ERROR_RED="0" # u8
 ERROR_GREEN="0" # u8
