--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ hex = "0.4"
 hmac = {version = "0.12", features = ["std"]}
 html_parser = "0.6.2"
 htmlescape = "0.3"
+http = "0.2.8"
 itertools = "0.10.1"
 lazy_static = "1.4"
 mongodb = "2.0.1"
@@ -44,7 +45,7 @@ quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
 rand = {version = "0.8", features = ["std_rng"]}
 regex = "1.5"
-reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate"]}
+reqwest = {version = "0.11.0", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns"]}
 secrecy = {version = "0.8", features = ["serde"]}
 serde = {version = "1.0", features = ["derive"]}
 serde-aux = "4.0.0"
