--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ ansi_term = "0.12"
 anyhow = "1"
 argon2 = {version = "0.4.0", features = ["std"]}
 base64 = "0.13"
+bytes = "1.2.1"
 chrono = "0.4"
 config = "0.11"
 convert_case = "0.6.0"
