--- a/.env
+++ b/.env
@@ -272,10 +272,10 @@ LINKS_LIMIT_REDDIT="0" # i64, but cannot be 0 or negative value (disable link li
 LINKS_LIMIT_TWITTER="0" # i64, but cannot be 0 or negative value (disable link limits instead of using 0(zero) for this parameter)
 
 IS_PREPARATION_ENABLED="false"
-IS_TRACING_ENABLED="false"
+LOG_TYPE="stack" # tracing|stack|none
 TRACING_TYPE="error" # trace|debug|info|warn|error
 IS_PARENT_TRACING_ENABLED="true"
-SOURCE_PLACE_TYPE="source" #source|github|none
+SOURCE_PLACE_TYPE="source" # source|github|none
 IS_TRACING_TIME_ENABLED="true"
 
 ERROR_RED="0" # u8
