--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ actix-web-lab = "0.18.3"
 ansi_term = "0.12"
 anyhow = "1"
 argon2 = {version = "0.4.0", features = ["std"]}
-base64 = "0.13"
+base64 = "0.20.0"
 bytes = "1.2.1"
 chrono = "0.4"
 config = "0.11"
@@ -68,7 +68,8 @@ tracing-log = "0.1"
 tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 unicode-segmentation = "1"
 urlencoding = "2"
-uuid = {version = "0.8.1", features = ["v4", "serde"]}
+uuid = {version = "0.8", features = ["v4", "serde"]}
+# uuid = {version = "1.2.2", features = ["v4", "serde"]}
 validator = "0.16.0"
 valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
 #
