--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ uuid = {version = "0.8", features = ["v4", "serde"]}
 # uuid = {version = "1.2.2", features = ["v4", "serde"]}
 validator = "0.16.0"
 valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
+gethostname = "0.4.1"
 #
 # tufa_common = {git = "https://github.com/kuqmua/tufa_common"}# git version
 tufa_common = {path = "../tufa_common"}# local dev test without commits version
