--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ tufa_common = {path = "../tufa_common"}# local dev test without commits version
 compile_time_git_info = {path = "../proc_macros/compile_time_git_info"}
 enum_extension = {path = "../proc_macros/enum_extension"}
 error_display = {path = "../proc_macros/error_display"}
+error_occurence = {path = "../proc_macros/error_occurence"}
 gen_enum = {path = "../proc_macros/gen_enum"}
 gen_enum_without_values = {path = "../proc_macros/gen_enum_without_values"}
 generate_getter_traits_for_struct_fields = {path = "../proc_macros/generate_getter_traits_for_struct_fields"}
