--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-# We could use any path here, but we are following the community convention
-# We could specify a library name using the `name` field. If unspecified,
-# cargo will default to `package.name`, which is what we want.
-path = "src/lib.rs"
+# [lib]
+# # We could use any path here, but we are following the community convention
+# # We could specify a library name using the `name` field. If unspecified,
+# # cargo will default to `package.name`, which is what we want.
+# path = "src/lib.rs"
 
 [[bin]]
 name = "tufa_server"
