remove mongo url partial env vars

--- a/.env
+++ b/.env
@@ -20,18 +20,7 @@ TIMEZONE="0" # i32, in seconds. main is 10800. value = hours * 3600. -24 < hours
 REDIS_IP="" # 127.0.0.1
 REDIS_PORT="" # 6379
 
-# url example MONGO_FIRST_HANDLE_URL_PART&MONGO_LOGIN&MONGO_SECOND_HANDLE_URL_PART&MONGO_PASSWORD&MONGO_THIRD_HANDLE_URL_PART&MONGO_IP&MONGO_FOURTH_HANDLE_URL_PART&MONGO_PORT&MONGO_FIFTH_HANDLE_URL_PART&MONGO_PARAMS
-MONGO_FIRST_HANDLE_URL_PART="" #local "mongodb://" cloud "mongodb+srv://"
-MONGO_SECOND_HANDLE_URL_PART=""  #local ":" cloud ":"
-MONGO_THIRD_HANDLE_URL_PART="" #local "@" cloud "@"
-MONGO_FOURTH_HANDLE_URL_PART="" #local ":" cloud ""
-MONGO_FIFTH_HANDLE_URL_PART="" #local "" cloud "/"
-
-MONGO_LOGIN=""
-MONGO_PASSWORD=""
-MONGO_IP=""
-MONGO_PORT=""
-MONGO_PARAMS=""
+MONGO_URL=""
 
 MONGO_CONNECTION_TIMEOUT="0" #ms u64 2000 
 
