remove source_place_type none

--- a/.env
+++ b/.env
@@ -47,4 +47,4 @@ POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 STARTING_CHECK_LINK="" # https://www.google.com/
 
 TRACING_TYPE="error" # trace|debug|info|warn|error
-SOURCE_PLACE_TYPE="source" # source|github|none
+SOURCE_PLACE_TYPE="source" # source|github
