ACCESS_CONTROL_MAX_AGE

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ SERVER_PORT="" # 8080
 HMAC_SECRET="" # super-long-and-secret-random-key-needed-to-verify-message-integrity
 BASE_URL="" # http://127.0.0.1
 REQUIRE_SSL="false" # true for prod, false for local dev
+ACCESS_CONTROL_MAX_AGE="3600" # Set a maximum time (in seconds) for which this CORS request may be cached
 
 GITHUB_NAME=""
 GITHUB_TOKEN=""
