ACCESS_CONTROL_ALLOW_ORIGIN

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ HMAC_SECRET="" # super-long-and-secret-random-key-needed-to-verify-message-integ
 BASE_URL="" # http://127.0.0.1
 REQUIRE_SSL="false" # true for prod, false for local dev
 ACCESS_CONTROL_MAX_AGE="3600" # Set a maximum time (in seconds) for which this CORS request may be cached
+ACCESS_CONTROL_ALLOW_ORIGIN="" # http://127.0.0.1:8080
 
 GITHUB_NAME=""
 GITHUB_TOKEN=""
