remove postgres url parts

--- a/.env
+++ b/.env
@@ -17,19 +17,7 @@ MONGO_URL=""
 
 MONGO_CONNECTION_TIMEOUT="0" #ms u64 2000 
 
-# example postgres://&POSTGRES_LOGIN:POSTGRES_PASSWORD&@POSTGRES_IP&POSTGRES_FOURTH_HANDLE_URL_PART&POSTGRES_PORT&POSTGRES_FIFTH_HANDLE_URL_PART&POSTGRES_DB [?paramspec]
-POSTGRES_FOURTH_HANDLE_URL_PART="" #local ":" cloud ""
-POSTGRES_FIFTH_HANDLE_URL_PART="" #local "/" cloud "/"
-
-POSTGRES_LOGIN=""
-POSTGRES_PASSWORD=""
-POSTGRES_IP=""
-POSTGRES_PORT=""
-POSTGRES_DB=""
-POSTGRES_PARAMS="" # example: target_session_attrs=any&application_name=myapp
-
-#sqlx require this for postgres
-DATABASE_URL="" 
+DATABASE_URL="" # postgres
 
 POSTGRES_CONNECTION_TIMEOUT="0" #ms u64 2000
 
