--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,20 @@ services:
       # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/postgresql_volume:/data/db
     ports:
       - 5432:5432
-  mongodb_service:
-    container_name: mongodb_container
-    image: mongo:latest
-    restart: always
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: mongolocalusername
-      ME_CONFIG_MONGODB_ADMINPASSWORD: mongolocalpassword
-    # env_file:
-    #   - ./dbs.env
-    ports:
-      - 27017:27017
-    volumes:
-      - ./volumes/mongodb_volume:/data/db
-      # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/mongo_volume:/data/db
+  # mongodb_service:
+  #   container_name: mongodb_container
+  #   image: mongo:latest
+  #   restart: always
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: mongolocalusername
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: mongolocalpassword
+  #   # env_file:
+  #   #   - ./dbs.env
+  #   ports:
+  #     - 27017:27017
+  #   volumes:
+  #     - ./volumes/mongodb_volume:/data/db
+  #     # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/mongo_volume:/data/db
   redis_service:
     container_name: redis_container
     image: 'redis:latest'
