--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     # env_file:
     #   - ./dbs.env
     volumes:
-      - ./volumes/postgresql_volume:/data/db
+      - ./postgres-data:/var/lib/postgresql/data
       # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/postgresql_volume:/data/db
     ports:
       - 5432:5432
@@ -26,8 +26,8 @@ services:
   #   #   - ./dbs.env
   #   ports:
   #     - 27017:27017
-  #   volumes:
-  #     - ./volumes/mongodb_volume:/data/db
+  ##   volumes:
+  ##     - ./volumes/mongodb_volume:/data/db
   #     # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/mongo_volume:/data/db
   redis_service:
     container_name: redis_container
@@ -37,8 +37,8 @@ services:
       - 6379:6379
     environment:
       ALLOW_EMPTY_PASSWORD: "yes"
-    volumes:
-      - ./volumes/redis_volume/:/data
+    # volumes:
+    #   - ./volumes/redis_volume/:/data
       # maybe instead of local folder create tufa_server folder for only this service like /var/lib/docker/volumes/tufa_server/redis_volume:/data/db
   # tufa_server_service:
   #   container_name: tufa_server-container
