--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,7 @@ tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
 unicode-segmentation = "1"
 urlencoding = "2"
 uuid = {version = "0.8", features = ["v4", "serde"]}
+futures-util = "0.3.28"
 # uuid = {version = "1.2.2", features = ["v4", "serde"]}
 validator = "0.16.0"
 valuable = {version = "0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
