--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,7 +103,7 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 
 [dev-dependencies]
 claim = {version = "0.5"}
-fake = {version = "~2.3"}
+fake = {version = "2.3"}
 linkify = {version = "0.8"}
 reqwest = {version = "0.11"}
 serde_json = {version = "1"}
