--- a/Cargo.toml
+++ b/Cargo.toml
@@ -102,14 +102,14 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 
 [dev-dependencies]
-claim = {version = "0.5"}
-fake = {version = "2.3"}
-linkify = {version = "0.8"}
-reqwest = {version = "0.11"}
-serde_json = {version = "1"}
-serde_urlencoded = {version = "0.7.1"}
-tokio = {version = "1", features = ["rt", "macros"]}
-wiremock = {version = "0.5.2"}
+claim = {version = "=0.5"}
+fake = {version = "=2.3"}
+linkify = {version = "=0.8"}
+reqwest = {version = "=0.11"}
+serde_json = {version = "=1"}
+serde_urlencoded = {version = "=0.7.1"}
+tokio = {version = "=1", features = ["rt", "macros"]}
+wiremock = {version = "=0.5.2"}
 
 # ###########################
 # # custom linker dependencies
