--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,7 +96,7 @@ user_port_try_from_u16 = {path = "../proc_macros/user_port_try_from_u16"}
 # xml-rs = "0.8" 
 # xmlparser = "0.13.2" 
 #google-youtube3-cli = "1.0.13+20200402" comand line interface as variant or just can use source code
-# strum = { version = "0.20", features = ["derive"] }#for enum into string
+# strum = { version = "=0.24.1", features = ["derive"] }#for enum into string
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
 # warp = "0.2"
 #tutorial from https://blog.logrocket.com/configuration-management-in-rust-web-services/
