--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ thiserror = {version = "=1.0.30"}
 time = {version = "=0.3.9"}
 tokio = {version = "1.7.1", features = ["macros"]}
 toml = {version = "=0.5"}
-tracing = {version = "0.1", features = ["log", "valuable"]}
+tracing = {version = "=0.1", features = ["log", "valuable"]}
 tracing-actix-web = {version = "=0.7.2"}
 tracing-bunyan-formatter = {version = "=0.3"}
 tracing-log = {version = "=0.1"}
